--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<title>Без названия</title>
 	</head>
 	<body>
-		<h2 class="title">Заголовок></h2>
+		<div class="page">
+			<h1 class="page__title">Заголвок страницы</h1>
+		</div>
 	</body>
 </html>
